fixed z-index.

--- a/extermal.css
+++ b/extermal.css
@@ -8,9 +8,9 @@
     flex-direction: row;
     flex-wrap: wrap;
     width: 95%;
-    margin: .5em auto ;
+    margin: 0.5em auto;
     box-sizing: border-box;
-    display:inline-table
+    display: inline-table;
   }
 
   #section-header {
@@ -23,6 +23,10 @@
     width: 100%;
     height: 500px;
   }
+  #section-image > img {
+    z-index: -1;
+  }
+
   #section-copy {
     order: 1;
     width: 100%;
@@ -93,11 +97,18 @@
 
   #section-image {
     order: 2;
-    width: 25%;
+    width: inherit;
     height: auto;
     overflow: hidden;
-    display: inline-table;
+    display: inline-block;
+    width: 25%;
   }
+
+  #section-image > img {
+    position: inherit;
+    z-index: -1;
+  }
+
   #section-copy {
     order: 3;
     width: 30%;
@@ -122,7 +133,6 @@
 #section-header {
   box-sizing: border-box;
   background-color: black;
-  
   padding: 2em;
   align-self: start;
 }
@@ -158,8 +168,17 @@ header > h4 {
 #section-image {
   overflow: hidden;
   background-image: url("img/picasso-blonde.png");
-  /* height: 70vmax; */
   border-radius: 0px 0px 0px 0px;
+}
+
+#section-image > img {
+  position: absolute;
+  box-sizing: border-box;
+  border-style: solid;
+  border-width: 3px;
+  /* z-index: -1; */
+  width: 185px;
+  /* height: inherit; */
 }
 
 #section-copy {
